Fix nav spacing

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -93,7 +93,7 @@ header {
 }
 
 header h1 a {
-  margin: 0 0.5em 0 0;
+  margin: 0 0.35em 0 0;
   color: var(--header-color);
 }
 
